--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>An empty Web Page</title>
 </head>
 <body>
-  <h1>Hey, Martin, This web page is blank.</h1>
+  <h1 style = "color: Blue">Hey, Martin, This web page is blank.</h1>
   <h2>(Well, mostly blank, anyway.)</h2>
 </body>
 </html>
